--- a/StartChain/Storyboards/Profile.storyboard
+++ b/StartChain/Storyboards/Profile.storyboard
@@ -19,70 +19,186 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="feZ-7R-Zr1" kind="relationship" relationship="rootViewController" id="XY7-NS-2of"/>
+                        <segue destination="h1E-5t-fkp" kind="relationship" relationship="rootViewController" id="oWd-2W-qUM"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pqs-QS-Uny" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="6754" y="1088"/>
         </scene>
-        <!--Profile View Controller-->
+        <!--Test Profile View Controller-->
         <scene sceneID="R17-tV-JYj">
             <objects>
-                <viewController id="feZ-7R-Zr1" customClass="ProfileViewController" customModule="StartChain" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TestProfileViewController" id="feZ-7R-Zr1" customClass="TestProfileViewController" customModule="StartChain" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CCb-Xb-fA4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bif-SI-MTG">
-                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j7g-EN-chC">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UbJ-k3-66L">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3bM-6P-h6K">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Vsj-JA-7MI">
-                                                <rect key="frame" x="0.0" y="31" width="414" height="200"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="diM-4f-Kja">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wtH-ep-iVX">
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
+                                                        <color key="backgroundColor" systemColor="tintColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="250" id="jG9-fD-SNn"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
                                             </stackView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstItem="Vsj-JA-7MI" firstAttribute="leading" secondItem="UbJ-k3-66L" secondAttribute="leading" id="gWZ-ss-Uwo"/>
-                                            <constraint firstItem="Vsj-JA-7MI" firstAttribute="top" secondItem="UbJ-k3-66L" secondAttribute="top" id="lXm-MA-Rkf"/>
-                                            <constraint firstAttribute="trailing" secondItem="Vsj-JA-7MI" secondAttribute="trailing" id="pox-9j-qjk"/>
+                                            <constraint firstItem="diM-4f-Kja" firstAttribute="leading" secondItem="3bM-6P-h6K" secondAttribute="leading" id="3Of-gl-Ysx"/>
+                                            <constraint firstAttribute="bottom" secondItem="diM-4f-Kja" secondAttribute="bottom" id="HkT-J4-qhC"/>
+                                            <constraint firstAttribute="trailing" secondItem="diM-4f-Kja" secondAttribute="trailing" id="NHu-gB-AA2"/>
+                                            <constraint firstItem="diM-4f-Kja" firstAttribute="top" secondItem="3bM-6P-h6K" secondAttribute="top" id="dQj-av-XPk"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="UbJ-k3-66L" secondAttribute="bottom" id="3bC-Mj-aRP"/>
-                                    <constraint firstAttribute="trailing" secondItem="UbJ-k3-66L" secondAttribute="trailing" id="78K-KX-lYN"/>
-                                    <constraint firstItem="UbJ-k3-66L" firstAttribute="width" secondItem="bif-SI-MTG" secondAttribute="width" id="KYm-Lw-o6P"/>
-                                    <constraint firstItem="UbJ-k3-66L" firstAttribute="leading" secondItem="bif-SI-MTG" secondAttribute="leading" id="c3c-fq-a4j"/>
-                                    <constraint firstItem="UbJ-k3-66L" firstAttribute="top" secondItem="bif-SI-MTG" secondAttribute="top" id="cUU-BJ-jXh"/>
+                                    <constraint firstAttribute="bottom" secondItem="3bM-6P-h6K" secondAttribute="bottom" id="5u7-zR-LpQ"/>
+                                    <constraint firstItem="3bM-6P-h6K" firstAttribute="width" secondItem="j7g-EN-chC" secondAttribute="width" id="KZj-5p-SOu"/>
+                                    <constraint firstAttribute="trailing" secondItem="3bM-6P-h6K" secondAttribute="trailing" id="YUJ-z0-xMf"/>
+                                    <constraint firstItem="3bM-6P-h6K" firstAttribute="leading" secondItem="j7g-EN-chC" secondAttribute="leading" id="cM4-Uf-vuT"/>
+                                    <constraint firstItem="3bM-6P-h6K" firstAttribute="top" secondItem="j7g-EN-chC" secondAttribute="top" id="hdY-39-Owq"/>
                                 </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="7ZZ-w3-VXY"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="aO4-Ql-JLO"/>
+                                <viewLayoutGuide key="contentLayoutGuide" id="wOz-AG-e9F"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="VAr-fC-NHA"/>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Dt2-aD-Q1J"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="bif-SI-MTG" firstAttribute="trailing" secondItem="Dt2-aD-Q1J" secondAttribute="trailing" id="Vxt-bv-soL"/>
-                            <constraint firstItem="bif-SI-MTG" firstAttribute="leading" secondItem="Dt2-aD-Q1J" secondAttribute="leading" id="nmc-SB-YfG"/>
-                            <constraint firstAttribute="bottom" secondItem="bif-SI-MTG" secondAttribute="bottom" id="qMt-Va-6l3"/>
-                            <constraint firstItem="bif-SI-MTG" firstAttribute="top" secondItem="Dt2-aD-Q1J" secondAttribute="top" id="zzR-g1-TRj"/>
+                            <constraint firstItem="j7g-EN-chC" firstAttribute="top" secondItem="Dt2-aD-Q1J" secondAttribute="top" id="1cQ-sw-zFv"/>
+                            <constraint firstItem="j7g-EN-chC" firstAttribute="leading" secondItem="Dt2-aD-Q1J" secondAttribute="leading" id="c5T-FN-bmw"/>
+                            <constraint firstItem="j7g-EN-chC" firstAttribute="bottom" secondItem="Dt2-aD-Q1J" secondAttribute="bottom" id="dOO-Z3-e3M"/>
+                            <constraint firstItem="j7g-EN-chC" firstAttribute="trailing" secondItem="Dt2-aD-Q1J" secondAttribute="trailing" id="eH2-KS-BJo"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="09S-tz-vaf"/>
+                    <connections>
+                        <outlet property="scrollView" destination="j7g-EN-chC" id="K8s-uA-W3F"/>
+                        <outlet property="stackView" destination="diM-4f-Kja" id="e1Q-Eq-znn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oAz-LH-DWO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7640.579710144928" y="1087.5"/>
+            <point key="canvasLocation" x="9681" y="1207"/>
+        </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="hoX-vr-q5W">
+            <objects>
+                <viewController id="h1E-5t-fkp" customClass="ProfileViewController" customModule="StartChain" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MeO-Es-I64">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zi4-AA-P82">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="ytW-cD-gyj">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ytW-cD-gyj" id="WXx-dn-9lQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="NJr-MG-bUX"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zi4-AA-P82" firstAttribute="leading" secondItem="NJr-MG-bUX" secondAttribute="leading" id="23V-oi-bTQ"/>
+                            <constraint firstItem="zi4-AA-P82" firstAttribute="trailing" secondItem="NJr-MG-bUX" secondAttribute="trailing" id="3EH-Pg-6hK"/>
+                            <constraint firstItem="zi4-AA-P82" firstAttribute="top" secondItem="NJr-MG-bUX" secondAttribute="top" id="6hP-wb-pOV"/>
+                            <constraint firstAttribute="bottom" secondItem="zi4-AA-P82" secondAttribute="bottom" id="77G-hU-Mek"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="EMG-e2-qID"/>
+                    <connections>
+                        <outlet property="tableView" destination="zi4-AA-P82" id="R27-io-AqY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hf4-ln-l33" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7600.0000000000009" y="1087.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="eXJ-0k-dAL">
+            <objects>
+                <viewController storyboardIdentifier="WhatWorksVC" id="eFy-BW-dPJ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="44Y-KP-Ua8">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What Works will be added later on. Thank you for your patience. Bear with us." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="coh-4R-daN">
+                                <rect key="frame" x="20" y="413.5" width="374" height="79"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="yAs-kX-OPi"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="coh-4R-daN" firstAttribute="leading" secondItem="yAs-kX-OPi" secondAttribute="leading" constant="20" id="8aC-yy-38H"/>
+                            <constraint firstItem="coh-4R-daN" firstAttribute="centerY" secondItem="yAs-kX-OPi" secondAttribute="centerY" id="cL3-yp-yha"/>
+                            <constraint firstItem="yAs-kX-OPi" firstAttribute="trailing" secondItem="coh-4R-daN" secondAttribute="trailing" constant="20" id="iCc-vD-TjG"/>
+                            <constraint firstItem="coh-4R-daN" firstAttribute="centerX" secondItem="yAs-kX-OPi" secondAttribute="centerX" id="kWW-v1-pj8"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ev6-HK-vkj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6168" y="1825"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="YyU-ri-J2d">
+            <objects>
+                <viewController storyboardIdentifier="HelpCentreVC" id="7xK-CZ-7Cd" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FFr-Fg-iAz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Help Center will be added later on. Thank you for your patience. Bear with us." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OzZ-7W-QH2">
+                                <rect key="frame" x="20" y="413.5" width="374" height="79"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="o7l-w6-Z4r"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="OzZ-7W-QH2" firstAttribute="centerX" secondItem="o7l-w6-Z4r" secondAttribute="centerX" id="3rg-u8-GDJ"/>
+                            <constraint firstItem="OzZ-7W-QH2" firstAttribute="centerY" secondItem="o7l-w6-Z4r" secondAttribute="centerY" id="bdG-lt-hqp"/>
+                            <constraint firstItem="OzZ-7W-QH2" firstAttribute="leading" secondItem="o7l-w6-Z4r" secondAttribute="leading" constant="20" id="eak-G6-daP"/>
+                            <constraint firstItem="o7l-w6-Z4r" firstAttribute="trailing" secondItem="OzZ-7W-QH2" secondAttribute="trailing" constant="20" id="nQh-jo-UNU"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="faJ-3g-8k6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5406" y="1825"/>
         </scene>
     </scenes>
     <resources>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
